utoipa-gen/tests/snapshots/schema_derive_test__schema_manual_impl.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "customer": {
      "$ref": "#/components/schemas/Newtype"
    }
  },
  "required": [
    "customer"
  ],
  "type": "object"
}
